--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h5>this is h5</h5>
         <h6>this is h6</h6>
         <img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/w_2560%2Cc_limit/Monkey-Selfie.jpg"/>
-    </boay>
+        <ul><li>HI</li></ul>
+    </body>
 </html>
