--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/w_2560%2Cc_limit/Monkey-Selfie.jpg"/>
         <ul><li>HI</li></ul>
         <strong>important</strong>
+        <small>Small</small>
     </body>
 </html>
