--- a/newlesson1.html
+++ b/newlesson1.html
@@ -17,6 +17,7 @@
             is the smallest header;goes 1 to 6
         </h3>\
         <p><stronng>Victor</stronng>
+            <small>i dont know what should i write</small>
           
 
     </body>
