--- a/lesson2.html
+++ b/lesson2.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Lesson 2 stuff</h1>
-    <p>we a creating a <a herf="https://www.youtube.com">link</a></p>
+    <p><a href="https://www.youtube.com">WE are creating a link</a></p>
   </body>
 </html>
