--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         <ul><li>HI</li></ul>
         <strong>important</strong>
         <small>Small</small>
+        <ol>
+            <li><a href="./lesson1.html">Lesson 1</a></li>
+            <li><a herf="./lesson2.html">Lesson 2</a></li>
+        </ol>
     </body>
 </html>
