--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Victor's Website</title>
     </head>
-    <boay>
+    <body>
         <h1>HELLOW!</h1>
         <h2>this is h2</h2>
         <h3>this is h3</h3>
@@ -16,7 +16,7 @@
         <small>Small</small>
         <ol>
             <li><a href="./lesson1.html">Lesson 1</a></li>
-            <li><a herf="./lesson2.html">Lesson 2</a></li>
+            <li><a href="./lesson2.html">Lesson 2</a></li>
         </ol>
     </body>
 </html>
