Update links in index.html and fix typo in lesson1.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <strong>important</strong>
         <small>Small</small>
         <ol>
-            <li><a href="./lesson1.html">Lesson 1</a></li>
-            <li><a href="./lesson2.html">Lesson 2</a></li>
+            <li><a href="./newlesson1.html">Lesson 1</a></li>
+            <li><a href="./lesson2.html" target="_blank">Lesson 2</a></li>
         </ol>
     </body>
 </html>
