--- a/lesson1.html
+++ b/lesson1.html
@@ -15,10 +15,9 @@
         </h2>
         <h3>
             is the smallest header;goes 1 to 6
-        </h3>\
-        <stronng>
-            Aiden
-        </stronng>
-        
+        </h3>
+        <p><stronng>Victor</stronng>
+            <p></p>
+
     </body>
 </html>
