--- a/lesson2.html
+++ b/lesson2.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Lesson 2 stuff</h1>
     <p><a href="https://www.youtube.com">WE are creating a link</a></p>
+    <li><a href="./index.html" target="_blank">Home page</a></li>
   </body>
 </html>
