--- a/newlesson1.html
+++ b/newlesson1.html
@@ -19,7 +19,7 @@
         <p><stronng>Victor</stronng>
             
             <small>i dont know what should i write</small>
-          
+          <li><a href="./index.html" target="_blank">Homepage</a></li>
 
     </body>
 </html>
