--- a/clash.html
+++ b/clash.html
@@ -1,1 +1,10 @@
 
+<!DOCTYPE>
+<html>
+    <head>
+        <title>Clash Royale</title>
+    </head>
+    <body>
+        <h1>Clash Royale</h1>
+    </body>
+</html>
