--- a/clash.html
+++ b/clash.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Clash Royale</h1>
+        <h2>Clash Royale is a mobile strategy game</h2>
+        <h3>It is developed by Supercell</h3>
     </body>
 </html>
