--- a/why i love playing clash.html
+++ b/why i love playing clash.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Why I Love Playing Clash</title>
+    </head>
+    <body>
+        <h1>
+            Why i love playing clash royale
+        </h1>
+        <h2>For me i always play clash royale during free time, do daily quests, open chests, and claim rewards. I am always sneaking in a 3-minute battle during class or pushing for trophies late at night.</h2>
+        <img src="https://www.supercell.com/static/images/games/clash-royale/clash-royale-share.jpg" alt="Clash Royale promotional image">
+        <li><a href="./clash.html">Back to home page</a></li>
+    </body>
+</html>
