--- a/Any improvements suggest for clash royale.html
+++ b/Any improvements suggest for clash royale.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Clash Royale Improvements</title>
+    </head>
+    <body>
+        <h1>Suggested Improvements for Clash Royale</h1>
+        <h2>Clash Royale is a fun game, but it could be improved by adding more characters, more arenas, and more game modes.</h2>
+        <p>Consider removing the Boss Bandit character for better balance.</p>
+        <img src="https://static.wikia.nocookie.net/clashroyale/images/e/e9/ChampionBigBandit_Pose1_4k_FX.png" alt="Clash Royale Boss Bandit Character" width="250" height="253" />
+<li><a href="./clash.html">back to hame page</a></li>
+    </body>
+</html>
