--- a/clash.html
+++ b/clash.html
@@ -7,5 +7,14 @@
         <h1>Clash Royale</h1>
         <h2>Clash Royale is a mobile strategy game</h2>
         <h3>It is developed by Supercell</h3>
+        <p>Why clash-royale is so fun to play?</p>
+        <p>Is free to play</p>
+        <p>It has a lot of characters</p>
+        <p>and It is a strategy game</p>
+        <img src="https://www.supercell.com/static/images/games/clash-royale/clash-royale-share.jpg">
+        <ul>
+            <li><a href="./why i love playing clash.html" target="_blank">why i always playing clash royale</a></li>
+            <li><a href="./Any improvements suggest for clash royale.html" target="_blank">improvements suggest</a></li>
+        </ul>
     </body>
 </html>
