--- a/clash.html
+++ b/clash.html
@@ -11,7 +11,7 @@
         <p>Is free to play</p>
         <p>It has a lot of characters</p>
         <p>and It is a strategy game</p>
-        <img src="https://www.supercell.com/static/images/games/clash-royale/clash-royale-share.jpg">
+        <img src="https://www.google.com/imgres?q=clash%20royale&imgurl=https%3A%2F%2Fmarksangryreview.com%2Fwp-content%2Fuploads%2F2023%2F08%2FClash-royale-Featured-pic.jpg&imgrefurl=https%3A%2F%2Fmarksangryreview.com%2Freview-clash-royale%2F&docid=TQ8lxwjM4omDjM&tbnid=yNbzzOCx4RI7uM&vet=12ahUKEwiWgZuQhIGQAxUzLTQIHT7oLnYQM3oECHEQAA..i&w=1000&h=563&hcb=2&ved=2ahUKEwiWgZuQhIGQAxUzLTQIHT7oLnYQM3oECHEQAA">
         <ul>
             <li><a href="./why i love playing clash.html" target="_blank">why i always playing clash royale</a></li>
             <li><a href="./Any improvements suggest for clash royale.html" target="_blank">improvements suggest</a></li>
