--- a/why i love playing clash.html
+++ b/why i love playing clash.html
@@ -8,7 +8,7 @@
             Why i love playing clash royale
         </h1>
         <h2>For me i always play clash royale during free time, do daily quests, open chests, and claim rewards. I am always sneaking in a 3-minute battle during class or pushing for trophies late at night.</h2>
-        <img src="https://www.supercell.com/static/images/games/clash-royale/clash-royale-share.jpg" alt="Clash Royale promotional image">
+        <img src="https://www.google.com/imgres?q=clash%20royale&imgurl=https%3A%2F%2Flearningworksforkids.com%2Fwp-content%2Fuploads%2FClash-Royale-Wallpapers-HD.jpeg&imgrefurl=https%3A%2F%2Flearningworksforkids.com%2Fplaybooks%2Fclash-royale%2F&docid=ZVD92vuc45eBgM&tbnid=WKkWePeh-kxCPM&vet=12ahUKEwiWgZuQhIGQAxUzLTQIHT7oLnYQM3oECB8QAA..i&w=1920&h=1189&hcb=2&ved=2ahUKEwiWgZuQhIGQAxUzLTQIHT7oLnYQM3oECB8QAA" alt="Clash Royale promotional image">
         <li><a href="./clash.html">Back to home page</a></li>
     </body>
 </html>
