--- a/why i love playing clash.html
+++ b/why i love playing clash.html
@@ -5,10 +5,12 @@
     </head>
     <body>
         <h1>
-            Why i love playing clash royale
+            Why I Love Playing Clash Royale
         </h1>
-        <h2>For me i always play clash royale during free time, do daily quests, open chests, and claim rewards. I am always sneaking in a 3-minute battle during class or pushing for trophies late at night.</h2>
-        <img src="https://www.google.com/imgres?q=clash%20royale&imgurl=https%3A%2F%2Flearningworksforkids.com%2Fwp-content%2Fuploads%2FClash-Royale-Wallpapers-HD.jpeg&imgrefurl=https%3A%2F%2Flearningworksforkids.com%2Fplaybooks%2Fclash-royale%2F&docid=ZVD92vuc45eBgM&tbnid=WKkWePeh-kxCPM&vet=12ahUKEwiWgZuQhIGQAxUzLTQIHT7oLnYQM3oECB8QAA..i&w=1920&h=1189&hcb=2&ved=2ahUKEwiWgZuQhIGQAxUzLTQIHT7oLnYQM3oECB8QAA" alt="Clash Royale promotional image">
-        <li><a href="./clash.html">Back to home page</a></li>
+        <h2>For me, I always play Clash Royale during free time, do daily quests, open chests, and claim rewards. I am always sneaking in a 3-minute battle during class or pushing for trophies late at night.</h2>
+        <img src="https://static.wikia.nocookie.net/clashroyale/images/7/7e/Clash_Royale_Logo.png" alt="Clash Royale promotional image">
+        <ul>
+            <li><a href="./clash.html">Back to home page</a></li>
+        </ul>
     </body>
 </html>
