--- a/game2.html
+++ b/game2.html
@@ -25,10 +25,17 @@
 <body>
   <h1>🎯 Click the Box!</h1>
   <div id="score">Score: 0</div>
+  <div id="highScore">High Score: 0</div>
   <div id="timer">Time Left: 30s</div>
+  <div id="lives">Lives: 3</div>
+  <div id="level">Level: 1</div>
   <button id="startButton">Start Game</button>
   <br>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
+  <div id="gameOverScreen" style="display:none; font-size:24px; margin-top:20px;">
+    <div id="finalScore"></div>
+    <div>Game Over!</div>
+  </div>
 
 <script>
   const canvas = document.getElementById("gameCanvas");
