--- a/gamefun4min.html
+++ b/gamefun4min.html
@@ -2,119 +2,190 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Game Fun 4 Min</title>
+  <title>Meteor Dodge — 4 Minute Game</title>
   <style>
     body {
-      background: #061223;
+      margin: 0;
+      background: radial-gradient(#0a1428, #050a14);
       color: #cfe6ff;
-      font-family: sans-serif;
+      font-family: system-ui, sans-serif;
       text-align: center;
+      overflow: hidden;
+    }
+    h1 { margin: 8px 0; }
+    #hud {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(10,20,40,0.6);
+      padding: 6px 14px;
+      border-radius: 8px;
+      font-weight: 600;
+      backdrop-filter: blur(4px);
     }
     canvas {
-      background: #0b1630;
       display: block;
-      margin: 20px auto;
+      margin: 0 auto;
+      background: linear-gradient(#081428, #0e1b38);
       border-radius: 8px;
     }
     button {
-      margin: 4px;
+      margin: 6px;
       padding: 6px 12px;
-      border-radius: 6px;
+      border-radius: 8px;
+      border: none;
       background: #1d3a6b;
       color: white;
-      border: none;
       cursor: pointer;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
-  <h1>Game Fun 4-Minute Demo</h1>
-  <canvas id="gameCanvas" width="640" height="480"></canvas>
+  <h1>Meteor Dodge 🌠</h1>
   <div id="hud">
-    <span id="time">04:00</span> |
-    <span id="score">0</span> pts |
-    <span id="gems">0</span> gems |
-    <span>High: <span id="high">0</span></span><br>
+    Time: <span id="time">04:00</span> | 
+    Score: <span id="score">0</span> | 
+    High: <span id="high">0</span><br>
     <button id="startBtn">Start</button>
     <button id="pauseBtn">Pause</button>
     <button id="resetBtn">Reset</button>
   </div>
+  <canvas id="gameCanvas" width="700" height="500"></canvas>
 
 <script>
-const canvas = document.getElementById('gameCanvas');
-const ctx = canvas.getContext('2d');
+const canvas = document.getElementById("gameCanvas");
+const ctx = canvas.getContext("2d");
 
-// Game variables
-let player = { x: 320, y: 400, radius: 20, speed: 200 };
-let score = 0, gems = 0, timeLeft = 240, GAME_LENGTH = 240;
 let running = false, paused = false, lastTime = 0;
+let timeLeft = 240, GAME_LENGTH = 240;
+let score = 0, high = Number(localStorage.getItem("md_high")) || 0;
+document.getElementById("high").textContent = high;
+
+const player = { x: canvas.width/2, y: canvas.height-40, r: 18, speed: 250 };
 let keys = {};
-let high = Number(localStorage.getItem('md_high')) || 0;
-document.getElementById('high').textContent = high;
+let meteors = [];
+let spawnTimer = 0;
 
-window.addEventListener('keydown', e => { keys[e.key.toLowerCase()] = true; });
-window.addEventListener('keyup', e => { keys[e.key.toLowerCase()] = false; });
+window.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
+window.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
 
+// Utility
+function rand(min,max){ return Math.random()*(max-min)+min; }
+
+// HUD
 function updateHUD() {
   const mm = Math.floor(timeLeft/60);
   const ss = Math.floor(timeLeft%60).toString().padStart(2,'0');
-  document.getElementById('time').textContent = `${mm.toString().padStart(2,'0')}:${ss}`;
-  document.getElementById('score').textContent = score;
-  document.getElementById('gems').textContent = gems;
-  document.getElementById('high').textContent = high;
+  document.getElementById("time").textContent = `${mm.toString().padStart(2,'0')}:${ss}`;
+  document.getElementById("score").textContent = Math.floor(score);
+  document.getElementById("high").textContent = high;
 }
 
-function render() {
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  // Draw player
+// Drawing
+function drawShip() {
+  ctx.save();
+  ctx.translate(player.x, player.y);
   ctx.beginPath();
-  ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-  ctx.fillStyle = '#9feaff';
+  ctx.moveTo(0, -player.r);
+  ctx.lineTo(player.r*0.8, player.r);
+  ctx.lineTo(-player.r*0.8, player.r);
+  ctx.closePath();
+  ctx.fillStyle = "#7fd3ff";
   ctx.fill();
   ctx.beginPath();
-  ctx.arc(player.x, player.y - 2, 7, 0, Math.PI * 2);
-  ctx.fillStyle = '#07283d';
+  ctx.arc(0, 0, 5, 0, Math.PI*2);
+  ctx.fillStyle = "#002a44";
   ctx.fill();
+  ctx.restore();
 }
 
-function update(timestamp) {
+function drawMeteor(m) {
+  ctx.save();
+  ctx.translate(m.x, m.y);
+  ctx.rotate(m.rot);
+  ctx.beginPath();
+  ctx.moveTo(-m.r, 0);
+  ctx.lineTo(0, -m.r);
+  ctx.lineTo(m.r, 0);
+  ctx.lineTo(0, m.r);
+  ctx.closePath();
+  const g = ctx.createLinearGradient(-m.r,-m.r,m.r,m.r);
+  g.addColorStop(0,"#ffb366");
+  g.addColorStop(1,"#cc6633");
+  ctx.fillStyle = g;
+  ctx.fill();
+  ctx.restore();
+}
+
+// Main update loop
+function update(t) {
   if (!running || paused) return;
-  if (!lastTime) lastTime = timestamp;
-  const delta = (timestamp - lastTime) / 1000;
-  lastTime = timestamp;
+  if (!lastTime) lastTime = t;
+  const dt = Math.min(0.05, (t - lastTime)/1000);
+  lastTime = t;
 
-  // Move player
-  if (keys['arrowleft'] || keys['a']) player.x -= player.speed * delta;
-  if (keys['arrowright'] || keys['d']) player.x += player.speed * delta;
-  player.x = Math.max(player.radius, Math.min(canvas.width - player.radius, player.x));
+  // Timer
+  timeLeft = Math.max(0, timeLeft - dt);
+  if (timeLeft <= 0) { endGame(); return; }
 
-  // Countdown timer
-  timeLeft = Math.max(0, timeLeft - delta);
-  if (timeLeft <= 0) {
-    endGame();
-    return;
+  // Input
+  if (keys["arrowleft"] || keys["a"]) player.x -= player.speed * dt;
+  if (keys["arrowright"] || keys["d"]) player.x += player.speed * dt;
+  player.x = Math.max(player.r, Math.min(canvas.width - player.r, player.x));
+
+  // Spawn meteors
+  spawnTimer -= dt;
+  if (spawnTimer <= 0) {
+    spawnTimer = rand(0.4, 1.0);
+    const m = { x: rand(20, canvas.width-20), y: -20, vy: rand(100, 220), r: rand(10, 26), rot: rand(0,Math.PI*2), vro: rand(-2,2) };
+    meteors.push(m);
   }
 
+  // Update meteors
+  for (let i = meteors.length-1; i >= 0; i--) {
+    let m = meteors[i];
+    m.y += m.vy * dt;
+    m.rot += m.vro * dt;
+    if (m.y - m.r > canvas.height) {
+      meteors.splice(i,1);
+      score += 10;
+      continue;
+    }
+    // Collision
+    const dx = player.x - m.x, dy = player.y - m.y;
+    if (dx*dx + dy*dy < (player.r + m.r)*(player.r + m.r)) {
+      endGame();
+      return;
+    }
+  }
+
+  // Draw frame
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  for (const m of meteors) drawMeteor(m);
+  drawShip();
+
   updateHUD();
-  render();
   requestAnimationFrame(update);
 }
 
+// Controls
 function startGame() {
   if (!running) {
     running = true;
     paused = false;
+    lastTime = 0;
     timeLeft = GAME_LENGTH;
     score = 0;
-    gems = 0;
-    lastTime = 0;
+    meteors = [];
     requestAnimationFrame(update);
   }
 }
 
 function pauseGame() {
   paused = !paused;
-  document.getElementById('pauseBtn').textContent = paused ? 'Resume' : 'Pause';
+  document.getElementById("pauseBtn").textContent = paused ? "Resume" : "Pause";
   if (!paused) { lastTime = 0; requestAnimationFrame(update); }
 }
 
@@ -123,51 +194,52 @@ function resetGame() {
   paused = false;
   timeLeft = GAME_LENGTH;
   score = 0;
-  gems = 0;
+  meteors = [];
   updateHUD();
-  render();
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  drawShip();
 }
 
 function endGame() {
   running = false;
   if (score > high) {
     high = score;
-    localStorage.setItem('md_high', String(high));
+    localStorage.setItem("md_high", String(high));
   }
-  updateHUD();
-  showEndOverlay();
+  showOverlay();
 }
 
-function showEndOverlay() {
-  const overlay = document.createElement('div');
+function showOverlay() {
+  const overlay = document.createElement("div");
   Object.assign(overlay.style, {
-    position: 'fixed', left: 0, top: 0, right: 0, bottom: 0,
-    display: 'flex', alignItems: 'center', justifyContent: 'center',
-    background: 'rgba(2,6,20,0.6)'
+    position: "fixed", left: 0, top: 0, right: 0, bottom: 0,
+    display: "flex", alignItems: "center", justifyContent: "center",
+    background: "rgba(0,0,0,0.7)"
   });
-  const card = document.createElement('div');
+  const card = document.createElement("div");
   Object.assign(card.style, {
-    background: '#07172b', padding: '20px', borderRadius: '12px', color: '#dff7ff'
+    background: "#081428", color: "#dff7ff",
+    padding: "20px", borderRadius: "12px", textAlign: "center"
   });
-  card.innerHTML = `<h2>Time!</h2>
-  <p>Your score: <strong>${score}</strong></p>
-  <p>Gems: ${gems}</p>`;
-  const btn = document.createElement('button');
-  btn.textContent = 'Play again';
+  card.innerHTML = `<h2>Game Over</h2>
+  <p>Final Score: <strong>${Math.floor(score)}</strong></p>`;
+  const btn = document.createElement("button");
+  btn.textContent = "Play Again";
   btn.onclick = () => { document.body.removeChild(overlay); startGame(); };
   card.appendChild(btn);
   overlay.appendChild(card);
   document.body.appendChild(overlay);
 }
 
-// UI
-document.getElementById('startBtn').onclick = startGame;
-document.getElementById('pauseBtn').onclick = pauseGame;
-document.getElementById('resetBtn').onclick = resetGame;
+// Buttons
+document.getElementById("startBtn").onclick = startGame;
+document.getElementById("pauseBtn").onclick = pauseGame;
+document.getElementById("resetBtn").onclick = resetGame;
 
-// Initial draw
-render();
+// Initial
+drawShip();
 updateHUD();
 </script>
 </body>
 </html>
+
