--- a/learningjs.html
+++ b/learningjs.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>\
+    <head></head>
+    <body>
+        <h1>
+            Welcome!!!!!
+        </h1>
+        <p>
+            nice to meet you,<span id="name"></span>!</p>
+            <script>
+                let name = prompt("Enter your name!");
+                document.getElementById("name").textContent = name;
+            </script>
+    </body>
+</html>
