--- a/learningjs.html
+++ b/learningjs.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>\
+<html>
     <head></head>
     <body>
         <h1>
             Welcome!!!!!
         </h1>
         <p>
-            nice to meet you,<span id="name"></span>!</p>
-            <script>
-                let name = prompt("Enter your name!");
-                document.getElementById("name").textContent = name;
-            </script>
+            nice to meet you,<span id="name"></span>!
+        </p>
+        <script>
+            let name = prompt("Enter your name!");
+            document.getElementById("name").textContent = name;
+        </script>
     </body>
 </html>
