--- a/introduction.html
+++ b/introduction.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Introduction</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
+<body>
+    <h1>Victor</h1>
+    
+    <h2>What kind of activities do you like to do in this class?</h2>
+    <p>annthing about comp sci</p>
+    <br>
+
+    <h2>What do you know about CSS? What are you hoping to learn </h2>
+    <p>i don't know anythign about CSS and i am hopeing to learn more about CSS</p>
+    <br>
+
+    <h2>What's your favorite food?</h2>
+    <p>Pizza</p>
+    <br>
+
+    <h2>What do you like to do outside of class?</h2>
+    <p>do volunteer with my friend or play vidoe game</p>
+    <br>
+
+    <h2>If you could learn a skill instantly, what would it be?</h2>
+    <p></p>
+    <br>
+
+</body>
