--- a/introduction.html
+++ b/introduction.html
@@ -27,7 +27,7 @@
     <br>
 
     <h2>If you could learn a skill instantly, what would it be?</h2>
-    <p></p>
+    <p>cooking</p>
     <br>
 
 </body>
