--- a/csslosson2.html
+++ b/csslosson2.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CSS Lesson 2</title>
+        <link rel="stylesheet" href="csslesson2.css">
+    </head>
+    <body>
+    <h1>Victor</h1>
+
+    <div class="questions">
+    <h2>What is a div element?</h2>
+    <p>the dev element is like a bucket that groups section of a webpage together.</p>
+    </div>
+    
+    <div class="questions">
+    <h2>What is one way you can identify or "target" a divelement?</h2>
+    <p>When you are calling a class in CSS, it will target every
+    </div>
+
+    <div class="questions">
+    <h2>Why would you use a div element?</h2>
+    <p>users can access sources easily</p></div>
+    <div class="questions">
+    <h2>What is a border property?</h2>
+    <p>The border property allows you to style the border around an element.</p>
+    </div>
+    <div class="questions">
+    <h2>What are some of the different border properties?</h2>
+    <p>Borders,Border width,Border color,Border sides Rounded borders</p>
+    </div>
+    <div class="questions">
+    <h2>What is the difference between margins and padding?</h2>
+    <p>paddins is the space betweent the content and the elemant and margins is the space betwent the div and the other elements</p>
+    </div>
+    </body>
+</html>
 
