--- a/1017stuff.html
+++ b/1017stuff.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>1017 Stuff</title>
+        <link rel="stylesheet" href="test.css">
+    </head>
+    <body>
+        <div id="card-container">
+            <h1 id="name">vicotr</h1>
+            <h2 id="role" class="f-cambria">lol</h2>
+            <p class="f-cambria">67</p>
+        </div>
+    </body>
+</html>
