--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="tstyle.css" rel="stylesheet" type="text/css">
+    <title>Troubleshooting Practice</title>
+</head>
+<body>
+<div id="corner-head">
+<h1>Troubleshooting</h1>
+</div>
+<div id="c-text">
+<h2>My Name</h2>
+<p>My favorite animal is the elephant</p>
+<div id="b-text">
+<h3>My favorite colour is:</h3>
+<div id="colour"></div>
+</div>
+</div>
+<div id="text">
+<h2>Lorem Ipsum</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut diam ut nisi ullamcorper
+vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p>
+</div>
+</body>
+</html>
