--- a/trouble.html
+++ b/trouble.html
@@ -19,10 +19,10 @@
 <div id="content">
 <div id="home" class="section light">
 <h1>Welcome to Alpaca Adventures</h1>
-<p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle
-personalities. They travel in groups called herds.</p>
+<p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle personalities. They travel in groups called herds.</p>
+</div>
 
-<div id=wool class=section dark>
+<div id=wool class="section dark">
 <h2>Wonderful Wool</h2>
 <p>Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
 clothing.</p>
