--- a/trouble.html
+++ b/trouble.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Alpaca Adventures</title>
-<link rel="stylesheet" href="trouble.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alpaca Adventures</title>
+    <link rel="stylesheet" href="trouble.css">
 </head>
+
 <body>
-<div id="sidebar">
-<h2>🦙 Alpaca Adventures</h2>
-<ul>
-<li><a href="home">Home</a></li>
-<li><a href="#wool">Wool</a></li>
-<li><a href="#herds">Herd Life</a></li>
-<li><a href="#fun">Fun Facts</a>
-</ul>
-</div>
-<div id="content">
-<div id="home" class="section light">
-<h1>Welcome to Alpaca Adventures</h1>
-<p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle personalities. They travel in groups called herds.</p>
-</div>
+    <div id="sidebar">
+        <h2>🦙 Alpaca Adventures</h2>
+        <h2>Victor</h2>
+        <ul>
+            <li><a href="home">Home</a></li>
+            <li><a href="#wool">Wool</a></li>
+            <li><a href="#herds">Herd Life</a></li>
+            <li><a href="#fun">Fun Facts</a></li> <!--it is missing a </li> it will Break the layout-->
+        </ul>
+    </div>
+    <div id="content">
+        <div id="home" class="section light">
+            <h1>Welcome to Alpaca Adventures</h1>
+            <p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle personalities.They
+                travel in groups called herds.</p>
+        </div>
 
-<div id=wool class="section dark">
-<h2>Wonderful Wool</h2>
-<p>Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
-clothing.</p>
-<div class="wool-box">
-<p>This box demonstrates <strong>absolute positioning</strong>.</p>
-<div class="wool-detail">
-<p>I'm a smaller box positioned inside the larger one!</p>
-</div>
-</div>
+        <div id=wool class="section dark">
+            <h2>Wonderful Wool</h2><!--there should be a </h2> at the end then the Text formatting might break -->
+            <p>Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
+                clothing.</p>
+            <div class="wool-box">
+                <p>This box demonstrates <strong>absolute positioning</strong>.</p><!-- is missing a <p> at the start it Confuse accessibility tools-->
+                <div class="wool-detail">
+                    <p>I'm a smaller box positioned inside the larger one!</p>
+                    <!--there should be a closing tag for div wool-detail -->
+                </div>
+            </div>
 
-</div>
-<div id="herds" class="section light">
-<h2>The Herd Life</h2>
-<p>Alpacas are social animals and hum to each other to communicate. They also have a
-leader that helps keep order in the group.</p>
-</div>
-<div id="fun" class="section dark">
-<h2>Fun Facts</h2>
-<ul>
-<li>Alpacas can live up to 20 years.</li>
-<li>They rarely spit at people — only other alpacas!</li>
-<li>Each alpaca has a unique “hum” sound.</li>
-</ul>
-</div>
-<div id="footer">
-<p>© 2025 Alpaca Adventures</p>
-</div>
+        </div>
+        <div id="herds" class="section light">
+            <h2>The Herd Life</h2>
+            <p>Alpacas are social animals and hum to each other to communicate. They also have a
+                leader that helps keep order in the group.</p>
+        </div>
+        <div id="fun" class="section dark">
+            <h2>Fun Facts</h2>
+            <ul>
+                <li>Alpacas can live up to 20 years.</li><!--there is missing a </li> it will Break the layout-->
+                <li>They rarely spit at people — only other alpacas!</li>
+                <li>Each alpaca has a unique “hum” sound.</li>
+            </ul>
+        </div>
+        <div id="footer">
+            <p>© 2025 Alpaca Adventures</p>
+        </div>
 </body>
+
 </html>
