--- a/trouble.html
+++ b/trouble.html
@@ -26,7 +26,7 @@
                 travel in groups called herds.</p>
         </div>
 
-        <div id=wool class="section dark">
+        <div id="wool"class="section dark"><!--there is missing a "" tag it will couse a error-->
             <h2>Wonderful Wool</h2><!--there should be a </h2> at the end then the Text formatting might break -->
             <p>Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
                 clothing.</p>
@@ -55,6 +55,7 @@
         <div id="footer">
             <p>© 2025 Alpaca Adventures</p>
         </div>
+    </div><!--missing a closing tag for div content it will couse Layout issues -->
 </body>
 
 </html>
