--- a/image.html
+++ b/image.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alpaca Adventures</title>
+    <link href="image.css" rel="style sheet" type="text/css"/>
+</head>
+<body>
+    <div class ="polaroid">
+        <img src=""alt="">
+        <div class="container">
+            <p>my fav pet</p>
+        </div>
+    </div>  
+</body>
+</html>
