--- a/image.html
+++ b/image.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpaca Adventures</title>
+    <title>lol</title>
     <link href="image.css" rel="style sheet" type="text/css"/>
 </head>
 <body>
