--- a/image.html
+++ b/image.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lol</title>
-    <link href="image.css" rel="style sheet" type="text/css"/>
+    <link href="image.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <div class ="polaroid">
-        <img src=""alt="">
+    <div class="polaroid">
+        <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSuGDSP4FPrdomt6W4FQE7usH8Z0N_0urTWEGe-3nuKpQ7X3jgQG8yAxZrcYkM_2ztz_WI006-y3NqDeVAUXnEBe6BixDgdPhEdZHmK8LGIusFD2Iysqh847w" alt="ramdon halloween costume">
         <div class="container">
-            <p>my fav pet</p>
+            <p>my halloween costume</p>
         </div>
     </div>  
 </body>
