--- a/trouble.html
+++ b/trouble.html
@@ -13,7 +13,7 @@
         <h2>🦙 Alpaca Adventures</h2>
         <h2>Victor</h2>
         <ul>
-            <li><a href="home">Home</a></li>
+            <li><a href="#home">Home</a></li><!--there is missing a # tag-->
             <li><a href="#wool">Wool</a></li>
             <li><a href="#herds">Herd Life</a></li>
             <li><a href="#fun">Fun Facts</a></li> <!--it is missing a </li> it will Break the layout-->
