--- a/nav.html
+++ b/nav.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Clash Royale Improvements</title>
-    </head>
-    <body>
-        <h1>Suggested Improvements for Clash Royale</h1>
-        <h2>Clash Royale is a fun game, but it could be improved by adding more characters, more arenas, and more game modes.</h2>
-        <p>Consider removing the Boss Bandit character for better balance.</p>
-<img src="https://static.wikia.nocookie.net/clashroyale/images/e/e9/ChampionBigBandit_Pose1_4k_FX.png" alt="Clash Royale Boss Bandit Character" width="250" height="253" />
-<ul>
-    <li><a href="./clash.html">back to home page</a></li>
-</ul>
-    </body>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>interactive Nav</title>
     <style>
         body{
             margin: 0;
@@ -58,4 +50,4 @@
         </nav>
         <button class="btn">Click me</button>
     </body>
-</html>
+</html
