--- a/page2.html
+++ b/page2.html
@@ -12,5 +12,50 @@
         <ul>
             <li><a href="./clash.html">Back to home page</a></li>
         </ul>
+        <style>
+        body{
+            margin: 0;
+            padding: 0;
+        }
+
+        ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333333;
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+        ul li{
+            float: left;
+        }
+        ul li a{
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        ul li a:hover:not(.active){
+            background-color: #111111;
+            font-size: larger;
+        }
+        ul li a.active{
+            background-color: #04aa6d;
+        }
+    </style>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="nav.html">Home</a></li>
+                <li><a class="active" href="page1.html">Page 2</a></li>
+                <li><a href="page2.html">Page 3</a></li>
+            </ul>
+        </nav>
+        <button class="btn">Click me</button>
     </body>
 </html>
