--- a/trouble.html
+++ b/trouble.html
@@ -22,9 +22,10 @@
     <div id="content">
         <div id="home" class="section light">
             <h1>Welcome to Alpaca Adventures</h1>
-            <p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle personalities.They
-                travel in groups called herds.</p>
+            <p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle personalities.They travel in groups called herds.</p>
         </div>
+    
+
 
         <div id="wool"class="section dark"><!--there is missing a "" tag it will couse a error-->
             <h2>Wonderful Wool</h2><!--there should be a </h2> at the end then the Text formatting might break -->
