--- a/boot.html
+++ b/boot.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boot Page</title>
@@ -26,50 +25,50 @@
     </div>
 
     <div class="container my-3">
-        <div class="row">
-            <h2>Available Now</h2>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="car-img-top img-fulid"
-                        src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2023/September/small-breeds-hero.jpg"
-                        style="height:300px; width:auto; object-fit: cover;">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Avaiable</h4>
-                        <p class="" card-text>Andy Warhowl</p>
-                        <a herf="#" class="btn btn-primary">Adopt Me</a>
-                    </div>
-                </div>
-            </div>
+    <h2>Available Now</h2>
+    <div class="row">
 
-            <h2>Available Now</h2>>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="car-img-top img-fulid"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Cat_August_2010-4.jpg/1200px-Cat_August_2010-4.jpg"
-                        style="height:300px; width:auto; object-fit: cover;">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Avaiable</h4>
-                        <p class="" card-text>Andy Warhowl</p>
-                        <a herf="#" class="btn btn-primary">Adopt Me</a>
-                    </div>
-                </div>
-            </div>
-
-            <h2>Available Now</h2>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="car-img-top img-fulid"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Cat_August_2010-4.jpg/1200px-Cat_August_2010-4.jpg"
-                        style="height:300px; width:auto; object-fit: cover;">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Avaiable</h4>
-                        <p class="" card-text>Andy Warhowl</p>
-                        <a herf="#" class="btn btn-primary">Adopt Me</a>
-                    </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top img-fluid"
+                    src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2023/September/small-breeds-hero.jpg"
+                    style="height:300px; object-fit: cover;">
+                <div class="card-body">
+                    <h4 class="card-title">Available</h4>
+                    <p class="card-text">Andy Warhowl</p>
+                    <a href="#" class="btn btn-primary">Adopt Me</a>
                 </div>
             </div>
         </div>
+
+        <div class="col-md-3">
+            <div class="card">
+                <img class="card-img-top img-fluid"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Cat_August_2010-4.jpg/1200px-Cat_August_2010-4.jpg"
+                    style="height:300px; object-fit: cover;">
+                <div class="card-body">
+                    <h4 class="card-title">Available</h4>
+                    <p class="card-text">Andy Warhowl</p>
+                    <a href="#" class="btn btn-primary">Adopt Me</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top img-fluid"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Cat_August_2010-4.jpg/1200px-Cat_August_2010-4.jpg"
+                    style="height:300px; object-fit: cover;">
+                <div class="card-body">
+                    <h4 class="card-title">Available</h4>
+                    <p class="card-text">Andy Warhowl</p>
+                    <a href="#" class="btn btn-primary">Adopt Me</a>
+                </div>
+            </div>
+        </div>
+
     </div>
+</div>
 
 </body>
 
