--- a/intorjavascript.html
+++ b/intorjavascript.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
-<html lanf="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to JavaScript</title>
-    <p>my favourite fast food is pizza</p>
-    <p>my favourite drink is coeka cola</p>
-    <p>my favourite snack is </p>
-
     <script>
-        let message = "Hello Friend";
-        let message3 = "my favourite fast food is pizza";
-        let message2 = "my favourite drink is coeka cola";
-        console.log(message3);
-        console.log(message2);
-        console.log(message);
+
         console.log("Hello World!");
         /* This is a multi-line comment */
+        let name = "Victor";
+        let grade = 100;
+        let job = "student";
+        
+        console.log(name, grade, job);
+
+        let num1 = 10;
+        let num2 = 12;
+        let num3 = 15;
+
+        console.log(num1 + num2 + num3);
+
+        num1 = num2 + num3;
+        num2 = num1 + num3;
+        num3 = num2 + num1;
+
+        console.log(num1);
+        console.log(num2);
+        console.log(num3);
+
+        let first = "Victor";
+        let last = "Liu";
+        let quest = "How are you?";
+        
+        console.log(`Hey ${first} ${last}. ${quest}`);
+
+
+        let age = prompt("Enter your age");
+        age = Number(age);
+
+        console.log(`You are ${age} years old.`);
+        console.log(age + 1);
+
     </script>
 
 </head>
 <body>
-    <h1>vicotr</h1>
-
+    <h1>Victor</h1>
 </body>
 </html>
