--- a/redesine.html
+++ b/redesine.html
@@ -296,6 +296,16 @@ Send us a message, and we'll get back to you with answers ASAP.</h4>
 </div>
 </div>
 <p><strong>Reviews</strong></p>
-
+<div class="row">
+  <div class="column">
+    <img src="https://github.com/victorliushengyuan-jpg/viclol.github.io/blob/main/Screenshot%202025-11-19%20142856.png?raw=true" alt="review" style="width:65%">
+  </div>
+  <div class="column">
+    <img src="https://github.com/victorliushengyuan-jpg/viclol.github.io/blob/main/Screenshot%202025-11-19%20144113.png?raw=true" alt="review" style="width:65%">
+  </div>
+  <div class="column">
+    <img src="https://github.com/victorliushengyuan-jpg/viclol.github.io/blob/main/Screenshot%202025-11-19%20144804.png?raw=true" alt="Review" style="width:65%">
+  </div>
+</div>
 
 </html>
