--- a/redesine.html
+++ b/redesine.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
 body {
   margin: 0;
   font-size: 28px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -181,16 +184,17 @@ p {
 }
 
 
+
 </style>
 </head>
 <body>
 <div class="header"></div>
 
 <div id="navbar">
-  <a class="active" href="javascript:void(0)">Home</a>
-  <a href="javascript:void(0)">Our services</a>
-  <a href="javascript:void(0)">About Us</a>
-  <a href="jacascript;void(0)">Contact Us</a>
+  <a class="active" href="redesine.html">Home</a>
+  <a href="OurSerivce.html">Our services</a>
+  <a href="About us.html">About Us</a>
+  <a href="Contact.html">Contact Us</a>
 </div>
 <div class="content">
 <img src="https://img1.wsimg.com/isteam/ip/2b6510c5-0d30-4dc6-8061-a9571f0bb37b/logo/ff38d70c-fbbc-4444-956e-439910f17d3d.png/:/rs=w:967,h:250,cg:true,m/cr=w:967,h:250/qt=q:95" alt="Clash Royale game image" width="400" height="120"/>
